moved to chapter 13

--- a/css_4e/css_4e/06/text.html
+++ b/css_4e/css_4e/06/text.html
@@ -11,7 +11,7 @@
 <div class="main">
 	<h1>Большая книга <strong>CSS</strong></h1>
 	<h2>Обзор возможностей типографики</h2>
-	<p>31 октября <strong>Роман Дибров</strong></p>
+	<p class="byline">31 октября <strong>Роман Дибров</strong></p>
 	<ul>
 		<li>Lorem Ipsum</li>
 		<li>Reprehenderit qui in ea</li>
